--- a/labs/lab1/portfolio/css/styles.css
+++ b/labs/lab1/portfolio/css/styles.css
@@ -28,7 +28,7 @@ nav a:hover { /*pseudo class*/
     transition: .9s; /*transition effect */
 }
 
-#content {
+.content {
     margin: 0px auto;
     width: 75%;
 }
@@ -40,6 +40,9 @@ nav a:hover { /*pseudo class*/
 }
 
 #welcomeText {
+    
+    padding-left: 10px;
+    padding-right: 10px;
     text-align: left;
     
 }
@@ -60,22 +63,23 @@ td {
 }
 
 td strong {
-    color: orange;
+    color: white;
 }
 
 #table-header {
-    background-color: #351a00;
+    background-color: #996666;
 }
 
 .table-row {
-    background-color: #753900;
+    background-color: #b8a9c9;
 }
 
 ul {
+    margin: 0px auto;
     text-align: left;
     padding-left: 200px;
 }
 
 .hobby {
-    color: yellow;
+    color: gray;
 }
